change in response of user details to better handel view and edit